Bring external image and font into project

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <div class="container">
         <div class="left-screen-container">
             <div class="background-img">
+                <img src="photo-1585202900225-6d3ac20a6962.avif" alt="picture of fern in a forest">
                 <div class="odin-title-banner">Odin</div>
                 <p class="img-credits-txt">Crefits to ___</p>
             </div>
