Style outer containers using flexbox

--- a/index.html
+++ b/index.html
@@ -9,11 +9,9 @@
 <body>
     <div class="container">
         <div class="left-screen-container">
-            <div class="background-img">
-                <img src="photo-1585202900225-6d3ac20a6962.avif" alt="picture of fern in a forest">
-                <div class="odin-title-banner">Odin</div>
-                <p class="img-credits-txt">Crefits to ___</p>
-            </div>
+            <img class="background-img" src="photo-1585202900225-6d3ac20a6962.avif" alt="picture of fern in a forest">
+            <div class="odin-title-banner">Odin</div>
+            <p class="img-credits-txt">Photo by Halie West on Unsplash</p>
         </div>
         <div class="right-screen-container">
             <section class="form-page-intro-txt">
