Style left container accordingly

--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
     <div class="container">
         <div class="left-screen-container">
             <img class="background-img" src="photo-1585202900225-6d3ac20a6962.avif" alt="picture of fern in a forest">
-            <div class="odin-title-banner">Odin</div>
+            <div class="odin-title-banner">
+                <img class="odin-title-banner-img" src="./odin-lined.png" alt="The Odin Project Logo">
+                <p class="odin-title-banner-txt">Odin</p>
+            </div>
             <p class="img-credits-txt">Photo by Halie West on Unsplash</p>
         </div>
         <div class="right-screen-container">
