Style layout for right side container of project

--- a/index.html
+++ b/index.html
@@ -23,20 +23,32 @@
             </section>
             <form class="form">
                 <div class="input-section">
-                    <p class="input-section-form-para"></p>
+                    <p class="input-section-form-para">Let's do this</p>
                     <div class="input-fields">
-                        <label for="first-name-input">FIRST NAME</label>
-                        <input id="first-name-input" name="first-name-input" type="text" required>
-                        <label for="last-name-input">LAST NAME</label>
-                        <input id="last-name-input" name="last-name-input" type="text" required>
-                        <label for="email-input">EMAIL</label>
-                        <input id="email-input" name="email-input" type="text">
-                        <label for="phone-number-input">PHONE NUMBER</label>
-                        <input id="phone-number-input" name="phone-number-input" type="text">
-                        <label for="password-input">PASSWORD</label>
-                        <input id="password-input" name="password-input" type="text" required>
-                        <label for="confirm-password-input">CONFIRM PASSWORD</label>
-                        <input id="confirm-password-input" name="confirm-password-input" type="text"  required>
+                        <div class="label-input-pair-container">
+                            <label for="first-name-input" class="input-label">FIRST NAME</label>
+                            <input id="first-name-input" class="input-field" name="first-name-input" type="text" required>
+                        </div>
+                        <div class="label-input-pair-container">
+                            <label for="last-name-input" class="input-label">LAST NAME</label>
+                            <input id="last-name-input" class="input-field" name="last-name-input" type="text" required>
+                        </div>
+                        <div class="label-input-pair-container">
+                            <label for="email-input" class="input-label">EMAIL</label>
+                            <input id="email-input" class="input-field" name="email-input" type="text">
+                        </div>
+                        <div class="label-input-pair-container">
+                            <label for="phone-number-input" class="input-label">PHONE NUMBER</label>
+                            <input id="phone-number-input" class="input-field" name="phone-number-input" type="text">
+                        </div>
+                        <div class="label-input-pair-container">
+                            <label for="password-input" class="input-label">PASSWORD</label>
+                            <input id="password-input" class="input-field" name="password-input" type="text" required>
+                        </div>
+                        <div class="label-input-pair-container">
+                            <label for="confirm-password-input" class="input-label">CONFIRM PASSWORD</label>
+                            <input id="confirm-password-input" class="input-field" name="confirm-password-input" type="text"  required>
+                        </div>
                     </div>
                 </div>
                 <div class="submit-section">
