Style finishing styles to right side of project

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
                         <div class="label-input-pair-container">
                             <label for="password-input" class="input-label">PASSWORD</label>
                             <input id="password-input" class="input-field" name="password-input" type="text" required>
+                            <p class="password-not-match-txt">*Passwords do not match</p>
                         </div>
                         <div class="label-input-pair-container">
                             <label for="confirm-password-input" class="input-label">CONFIRM PASSWORD</label>
@@ -53,7 +54,7 @@
                 </div>
                 <div class="submit-section">
                     <button type="submit" class="create-account-submit-btn">Create Account</button>
-                    <p class="login-alternative-text">Already have an account? <a href="#">Log in</a></p>
+                    <p class="login-alternative-text">Already have an account? <a href="#" class="login-link">Log in</a></p>
                 </div>
             </form>
         </div>
